--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-
-VITE_BASE_URL=https://invisibox-server-production.up.railway.app/
+# VITE_BASE_URL=https://invisibox-server-production.up.railway.app/api
+VITE_BASE_URL=http://localhost:5000/api
 VITE_SECRET_KEY=invisibox-secret-key-2024
